tests/cli_tests/pathway_enrichment/0001_example.sh.output
attempting wx import
attempting R import
R imported
Traceback (most recent call last):
  File "/Users/jeffhykin/repos/transit/./src/transit.py", line 23, in <module>
    import pytransit.__main__
  File "/Users/jeffhykin/repos/transit/src/pytransit/__main__.py", line 8, in <module>
    import pytransit.methods
  File "/Users/jeffhykin/repos/transit/src/pytransit/methods/__init__.py", line 8, in <module>
    from .ttnfitness         import *
  File "/Users/jeffhykin/repos/transit/src/pytransit/methods/ttnfitness.py", line 25
    def slow_computation(gene_one_hot_encoded, ttn_vectors)
                                                           ^
SyntaxError: expected ':'
